--- a/app/templates/pages/help.html
+++ b/app/templates/pages/help.html
@@ -95,15 +95,15 @@
                     <div class="border rounded-lg p-6">
                         <h3 class="text-lg font-semibold text-gray-900 mb-3">配送範圍有哪些？</h3>
                         <p class="text-gray-700">
-                            目前提供台灣本島配送服務，離島地區可能需要額外的配送時間。
+                            目前提供台灣本島配送服務，離島地區需要額外的運費計算。
                             國際配送服務正在規劃中，敬請期待。
                         </p>
                     </div>
 
                     <div class="border rounded-lg p-6">
-                        <h3 class="text-lg font-semibold text-gray-900 mb-3">如何聯繫客服？</h3>
+                        <h3 class="text-lg font-semibold text-gray-900 mb-3">運費如何計算？</h3>
                         <p class="text-gray-700">
-                            您可以透過客服信箱或電話聯繫我們的客服團隊，我們將竭誠為您服務。
+                            訂單金額滿 NT$1,000 享免運費優惠，未滿 NT$1,000 的訂單酌收 NT$60 運費。
                         </p>
                     </div>
 
